map persist which is also character status persist AB#165 AB#180